<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DateActivity">

    <Button
        android:id="@+id/btn_date_before"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#DDD7D7"
        android:text="@string/btn_date_before"
        android:textColor="#000000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/view2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edit_date_before"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_date_before"
            android:importantForAutofill="no"
            android:inputType="date|number"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textView3"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/res_date_before"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/res_date_before"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#978F8F" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/view3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/edit_date_after"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/edit_date_after"
            android:importantForAutofill="no"
            android:inputType="date|number"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewafter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewafter"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/res_date_after"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/res_date_after"
        android:textColor="#000000"
        android:textSize="36sp" />

    <Button
        android:id="@+id/btn_date_after"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="#DDD7D7"
        android:text="@string/btn_date_after"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/textView8"
        android:textColor="#000000"
        android:textSize="36sp" />

</LinearLayout>